# lab-07-asio-server

./: .travis.yml  CMakeLists.txt  README.md
include/: simple_server.hpp  simple_server_lib.hpp
include/simple_server_lib/: client.hpp  definitions.hpp  master.hpp  server.hpp  slave.hpp  user_manager.hpp
scripts/: checks.sh
sources/: main.cpp  simple_server.cpp
sources/simple_server_app/: main.cpp
sources/simple_server_lib/: client.cpp  master.cpp  server.cpp  slave.cpp  user_manager.cpp
tests/: test_simple_server.cpp
